Ready for 1.1.0 tag. Misalignment on Chrome has been fixed. Now most of Wordpress themes are properly supported. Major changes on readme.txt in order to track new installation requirement (IP address shall be registered)
git-svn-id: https://plugins.svn.wordpress.org/wp-mailup@475878 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/style2.css
+++ b/trunk/style2.css
@@ -1,25 +1,30 @@
 #subscribeForm{
-	background-color:#FCFCF0;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
-	font-family:Tahoma, Geneva, sans-serif;
+	border:1px solid;
 }
-#subscribeForm label{
-	color:#5757C1;
+#subscribeForm form{
+	margin:5px;
+	border:none;
+	padding:0;
+}
+#subscribeForm fieldset{
+	border:none;
 }
 #subscribeForm textarea{
-	color:#5757C1;
-	font-family:Tahoma, Geneva, sans-serif;
 }
 #subscribeForm input[type=text]{
-	color:#5757C1;
+	padding:0;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
 }
 #subscribeForm input[type=submit]{
-	border:1px solid #FFF;
-	color:#5757C1;
-	background-color:#FC8700;
+	border:2px solid #666;
+	color:#fff;
+	background-color:#666;
 	cursor:pointer;
 	text-transform:uppercase;
 	font-weight:bold;
@@ -28,10 +33,6 @@
 	border-radius:5px;
 }
 #subscribeForm input[type=submit]:hover{
-	color:#FC8700;
-	background-color:#5757C1;
-}
-#subscribeForm .widget-title{
-	font-family:Tahoma, Geneva, sans-serif;
-	color:#FC8700;
+	color:#fff;
+	background-color:#333;
 }
