--- a/trunk/style4.css
+++ b/trunk/style4.css
@@ -1,33 +1,39 @@
 #subscribeForm{
-	background-color:transparent;
-	border:2px groove #000;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:1px 1px 1px 1px #C8C8C8;
+	background-color:#000;
 	font:normal normal normal 0.9em/18px Arial, Helvetica, sans-serif;
+	text-align:center;
+	padding-bottom:10px;
 }
 #subscribeForm label{
-	color:#000;
+	color:#fff;
+}
+#subscribeForm fieldset{
+	padding-bottom:10px;
+	border:none;
 }
 #subscribeForm textarea{
 	width:90%;
-	color:#000;
+	color:#fff;
 	font-family:Arial, Helvetica, sans-serif;
+	-moz-border-radius:25px;
+	-webkit-border-radius:25px;
+	border-radius:25px;
 }
 #subscribeForm input[type=text]{
 	color:#000;
+	-moz-border-radius:25px;
+	-webkit-border-radius:25px;
+	border-radius:25px;
 }
 #subscribeForm input[type=submit]{
-	border:1px solid #000;
 	color:#FFFFFF;
 	background-color:#000;
 	cursor:pointer;
 	text-transform:uppercase;
 	font-weight:bold;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
+	-moz-border-radius:25px;
+	-webkit-border-radius:25px;
+	border-radius:25px;
 }
 #subscribeForm input[type=submit]:hover{
 	color:#000;
@@ -36,5 +42,11 @@
 }
 #subscribeForm .widget-title{
 	font-family:Arial, Helvetica, sans-serif;
-	color:#000;
+	color:#fff;
+}
+#subscribeForm p,  #subscribeForm h1, #subscribeForm h2, #subscribeForm h3,  #subscribeForm h4,  #subscribeForm h5{
+	color:#fff;
+}
+#subscribeForm {
+	color:#fff;
 }
